Closed Bug 298417 Opened 21 years ago Closed 21 years ago

cygwin/mingw bustage in software updater

Categories

(Firefox Build System :: General, defect)

x86
Windows XP
defect
Not set
blocker

Tracking

(Not tracked)

RESOLVED FIXED
mozilla1.8beta3

People

(Reporter: cls, Assigned: cls)

References

Details

Attachments

(1 file)

The software updater landing broke the mingw gcc builds.
Attached patch Fix bustageSplinter Review
Fix HOST_EXTRA_LIBS inconsistency & do not define WinMain() for mingw builds.
Assignee: nobody → cls
Status: NEW → ASSIGNED
Attachment #186990 - Flags: review?(benjamin)
Attachment #186990 - Flags: review?(benjamin) → review+
Attachment #186990 - Flags: approval1.8b3?
Attachment #186990 - Flags: approval-aviary1.1a2?
Comment on attachment 186990 [details] [diff] [review] Fix bustage a=chofmann
Attachment #186990 - Flags: approval1.8b3?
Attachment #186990 - Flags: approval1.8b3+
Attachment #186990 - Flags: approval-aviary1.1a2?
Attachment #186990 - Flags: approval-aviary1.1a2+
The patch has been checked in.
Status: ASSIGNED → RESOLVED
Closed: 21 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla1.8beta3
Product: Core → Firefox Build System
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: