Use HOST_EXTRA_LIBS for linking HOST_PROGRAMS. Do not define WinMain() for gcc builds. Bug #298417 r=bsmedberg a=chofmann