toolkit/mozapps/update/src/updater/updater.cpp
@@ -1071,7 +1071,7 @@ int DoUpdate()
   return rv;
 }
 
-#if defined(XP_WIN) && !defined(DEBUG)
+#if defined(XP_WIN) && !defined(DEBUG) && !defined(__GNUC__)
 // We need WinMain in order to not be a console app.  This function is unused
 // if we are a console application.
 int WINAPI WinMain( HINSTANCE, HINSTANCE, LPSTR args, int )
